# qwen-tts

./: .dockerignore  .gitignore  Dockerfile  README.md  api_server.py  client_example.py  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.trae/documents/: 重构为npm包计划.md
src/: client.ts  constants.ts  index.ts  server.ts  types.ts
